--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/android-chrome-512x512.png?v=1651540685611" />
+    <link
+      rel="icon"
+      href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/android-chrome-512x512.png?v=1651540685611"
+    />
     <title>Turkey2098</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <p>
-      Coming Soon!
-    </p>
+    <div class="topnav">
+      <img
+        src="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__2_-removebg-preview%20(1).png?v=1651540833448"
+      />
+      <a href="/index.html">Home</a>
+      <a href="/projects.html">Projects</a>
+      <a href="/blog">Blog</a>
+    </div>
+    <p>Coming Soon!</p>
   </body>
 </html>
