🐌❄️ Checkpoint ./blog/index.html:31343558/7008 ./style.css:31343558/6966 ./index.html:31343558/36

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <img
         src="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__2_-removebg-preview%20(1).png?v=1651540833448"
         onclick="window.location.href=('/index.html')"
+        class="homeImg"
       />
       <a href="/index.html">Home</a>
       <a href="/projects.html">Projects</a>
