--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
-      href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/android-chrome-512x512.png?v=1651540685611"
+      href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
     />
     <title>Turkey2098</title>
     <link rel="stylesheet" href="/style.css" />
@@ -14,7 +14,7 @@
   <body>
     <div class="topnav">
       <img
-        src="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__2_-removebg-preview%20(1).png?v=1651540833448"
+        src="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
         onclick="window.location.href=('/index.html')"
         class="homeImg"
       />
