⛺️🏄 Checkpoint ./blog/index.html:31343558/6975 ./projects.html:31343558/1939 ./style.css:31343558/504

--- a/projects.html
+++ b/projects.html
@@ -22,5 +22,48 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog">Blog</a>
     </div>
+    
+    <h1>My Projects:</h1>
+
+    <div data-server-rendered="true" id="__nuxt">
+      <div id="__layout">
+        <div>
+          <div class="container" >
+            <div class="posts" >
+              <a href="blog/3" class="link" 
+                ><div bg="{bg}" class="page-wrapper">
+                  <div
+                    class="link-background"
+                    style="
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/gmail-02-removebg-preview.png?v=1651873519408);
+                    "
+                  ></div>
+                  <div class="link-title">They're Changing Our Emails</div>
+                </div></a
+              ><a href="blog/2" class="link" 
+                ><div bg="{bg}" class="page-wrapper">
+                  <div
+                    class="link-background"
+                    style="
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/Screenshot%202022-04-30%203.01.33%20PM.png?v=1651345324046);
+                    "
+                  ></div>
+                  <div class="link-title">Unblocked Games</div>
+                </div></a
+              ><a href="blog/1" class="link" 
+                ><div bg="{bg}" class="page-wrapper">
+                  <div
+                    class="link-background"
+                    style="background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095)"
+                  ></div>
+                  <div class="link-title">Goalie Stats Machine</div>
+                  <div class="link-date">11/17/20</div>
+                </div></a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
