✨⛩ Checkpoint ./projects.html:31343558/1836 ./blog/index.html:31343558/484 ./.glitch-assets:31343558/413

--- a/projects.html
+++ b/projects.html
@@ -30,31 +30,31 @@
         <div>
           <div class="container" >
             <div class="posts" >
-              <a href="blog/3" class="link" 
+              <a href="https://unblocked-games-66.glitch.me" class="link" 
                 ><div bg="{bg}" class="page-wrapper">
                   <div
                     class="link-background"
                     style="
-                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/gmail-02-removebg-preview.png?v=1651873519408);
-                    "
-                  ></div>
-                  <div class="link-title">They're Changing Our Emails</div>
-                </div></a
-              ><a href="blog/2" class="link" 
-                ><div bg="{bg}" class="page-wrapper">
-                  <div
-                    class="link-background"
-                    style="
-                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/Screenshot%202022-04-30%203.01.33%20PM.png?v=1651345324046);
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images-removebg-preview.png?v=1651885844117);
                     "
                   ></div>
                   <div class="link-title">Unblocked Games</div>
                 </div></a
-              ><a href="blog/1" class="link" 
+              ><a href="https://a-stars-life.glitch.me" class="link" 
                 ><div bg="{bg}" class="page-wrapper">
                   <div
                     class="link-background"
-                    style="background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095)"
+                    style="
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images-removebg-preview.png?v=1651885844117);
+                    "
+                  ></div>
+                  <div class="link-title">A Stars Life</div>
+                </div></a
+              ><a href="https://goailie-stats-machine.glitch.me" class="link" 
+                ><div bg="{bg}" class="page-wrapper">
+                  <div
+                    class="link-background"
+                    style="background-image: url(https://goailie-stats-machine.glitch.me)"
                   ></div>
                   <div class="link-title">Goalie Stats Machine</div>
                 </div></a
