🐠🐓 Checkpoint ./projects.html:31343558/13008 ./.glitch-assets:31343558/2630

--- a/projects.html
+++ b/projects.html
@@ -22,15 +22,15 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog">Blog</a>
     </div>
-    
+
     <h1>My Projects:</h1>
 
     <div data-server-rendered="true" id="__nuxt">
       <div id="__layout">
         <div>
-          <div class="container" >
-            <div class="posts" >
-              <a href="https://unblocked-games-66.glitch.me" class="link" 
+          <div class="container">
+            <div class="posts">
+              <a href="https://unblocked-games-66.glitch.me" class="link"
                 ><div bg="{bg}" class="page-wrapper">
                   <div
                     class="link-background"
@@ -40,21 +40,23 @@
                   ></div>
                   <div class="link-title">Unblocked Games</div>
                 </div></a
-              ><a href="https://a-stars-life.glitch.me" class="link" 
+              ><a href="https://a-stars-life.glitch.me" class="link"
                 ><div bg="{bg}" class="page-wrapper">
                   <div
                     class="link-background"
                     style="
-                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images-removebg-preview.png?v=1651885844117);
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download%20(9).jpeg?v=1651886441424);
                     "
                   ></div>
                   <div class="link-title">A Stars Life</div>
                 </div></a
-              ><a href="https://goailie-stats-machine.glitch.me" class="link" 
+              ><a href="https://goailie-stats-machine.glitch.me" class="link"
                 ><div bg="{bg}" class="page-wrapper">
                   <div
                     class="link-background"
-                    style="background-image: url(https://goailie-stats-machine.glitch.me)"
+                    style="
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__4_-removebg-preview.png?v=1651886385564);
+                    "
                   ></div>
                   <div class="link-title">Goalie Stats Machine</div>
                 </div></a
