🎅🕰 Checkpoint ./.glitch-assets:31343558/1222 ./projects.html:31343558/386

--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                   <div
                     class="link-background"
                     style="
-                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download%20(9).jpeg?v=1651886441424);
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images.jpeg?v=1651886924844);
                     "
                   ></div>
                   <div class="link-title">A Stars Life</div>
