--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                   <div
                     class="link-background"
                     style="
-                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images.jpeg?v=1651886924844);
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/sun-png-hd-375376.png?v=1651921827937);
                     "
                   ></div>
                   <div class="link-title">A Stars Life</div>
