--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       />
       <a href="/index.html">Home</a>
       <a href="/projects.html">Projects</a>
-      <a href="/blog">Blog</a>
+      <a href="/blog.html">Blog</a>
     </div>
     <p>Coming Soon!</p>
   </body>
