--- a/index.html
+++ b/index.html
@@ -22,6 +22,5 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog.html">Blog</a>
     </div>
-    <p>Coming Soon!</p>
-  </body>
+r  </body>
 </html>
