💺🚖 Checkpoint ./index.html:31343558/76 ./style.css:31343558/36 ./blog/1/index.html:31343558/3701

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog.html">Blog</a>
     </div>
-r  </body>
+    <h1>
+      Homepage coming soon...
+    </h1>
+  </body>
 </html>
