🍭💶 Checkpoint ./projects/style.css:31343558/1253 ./projects/unblockedgames66/index.html:31343558/305

--- a/projects/unblockedgames66/index.html
+++ b/projects/unblockedgames66/index.html
@@ -25,5 +25,13 @@
     <h1>
       Unblocked Games 66
     </h1>
+    
+    <h2>
+      Unblocked Games Website
+    </h2>
+    
+    <p>
+      Unblocked Games 66 was a project I worked on through the 2nd semester of my 8th grade year
+    </p>
   </body>
 </html>
