🍍🌌 Checkpoint ./projects/style.css:31343558/36 ./projects/unblockedgames66/index.html:31343558/3094

--- a/projects/unblockedgames66/index.html
+++ b/projects/unblockedgames66/index.html
@@ -22,16 +22,17 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog.html">Blog</a>
     </div>
-    <h1>
-      Unblocked Games 66
-    </h1>
-    
-    <h2>
-      Unblocked Games Website
-    </h2>
-    
+    <h1>Unblocked Games 66</h1>
+
+    <h2>Unblocked Games Website</h2>
+
     <p>
-      Unblocked Games 66 was a project I worked on through the 2nd semester of my 8th grade year
+      Unblocked Games 66 was a project I worked on through the 2nd semester of
+      my 8th grade year. The Idea behind this was to as well as I could, copy
+      the unblocked games websites that were created on the classic google
+      sites. I wanted to do this because all of those games websites were going
+      out-of-date with the conclusion of flash and the introduction of the new
+      google sites.
     </p>
   </body>
 </html>
