--- a/projects/unblockedgames66/index.html
+++ b/projects/unblockedgames66/index.html
@@ -32,7 +32,10 @@
       the unblocked games websites that were created on the classic google
       sites. I wanted to do this because all of those games websites were going
       out-of-date with the conclusion of flash and the introduction of the new
-      google sites.
+      google sites. If you want to learn more about it you can check my blog.
+    </p>
+    <p>
+      <a href="https://unblocked-games-66.glitch.me">Check It Out</a>
     </p>
   </body>
 </html>
