😜👟 Checkpoint ./projects/style.css:31343558/185 ./projects/unblockedgames66/index.html:31343558/181

--- a/projects/unblockedgames66/index.html
+++ b/projects/unblockedgames66/index.html
@@ -35,7 +35,7 @@
       google sites. If you want to learn more about it you can check my blog.
     </p>
     <p>
-      <a href="https://unblocked-games-66.glitch.me">Check It Out</a>
+      <a href="https://unblocked-games-66.glitch.me">Check It Out</a> | <a href="/blog/2">The Blog</a>
     </p>
   </body>
 </html>
