🏥🎈 Checkpoint ./projects/style.css:31343558/186 ./projects/unblockedgames66/index.html:31343558/182 ./projects.html:31343558/76

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
         <div>
           <div class="container">
             <div class="posts">
-              <a href="https://unblocked-games-66.glitch.me" class="link"
+              <a href="/projects/unblockedgames66" class="link"
                 ><div bg="{bg}" class="page-wrapper">
                   <div
                     class="link-background"
