--- a/projects/starslife/index.html
+++ b/projects/starslife/index.html
@@ -22,19 +22,14 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog.html">Blog</a>
     </div>
-    <h1>Unblocked Games 66</h1>
+    <h1>A Stars Life</h1>
 
-    <h2>Unblocked Games Website</h2>
+    <h2>Randomized Choose Your Own Adventure</h2>
     
-    <p class="date">1/1/22</p>
+    <p class="date"></p>
 
     <p>
-      Unblocked Games 66 was a project I worked on through the 2nd semester of
-      my 8th grade year. The Idea behind this was to as well as I could, copy
-      the unblocked games websites that were created on the classic google
-      sites. I wanted to do this because all of those games websites were going
-      out-of-date with the conclusion of flash and the introduction of the new
-      google sites. If you want to learn more about it you can check my blog.
+      A Stars Life is a choose your own adventure game that I made in the 1st Semester 
     </p>
     <p class="links">
       <a href="https://unblocked-games-66.glitch.me">Check It Out</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/blog/2">The Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://glitch.com/edit/#!/unblocked-games-66">Source Code</a>
