🏛🌮 Checkpoint ./projects/starslife/index.html:31343558/7967 ./projects.html:31343558/1115

--- a/projects.html
+++ b/projects.html
@@ -30,17 +30,7 @@
         <div>
           <div class="container">
             <div class="posts">
-              <a href="/projects/unblockedgames66" class="link"
-                ><div bg="{bg}" class="page-wrapper">
-                  <div
-                    class="link-background"
-                    style="
-                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images-removebg-preview.png?v=1651885844117);
-                    "
-                  ></div>
-                  <div class="link-title">Unblocked Games</div>
-                </div></a
-              ><a href="https://a-stars-life.glitch.me" class="link"
+              <a href="/projects/starslife" class="link"
                 ><div bg="{bg}" class="page-wrapper">
                   <div
                     class="link-background"
@@ -49,6 +39,16 @@
                     "
                   ></div>
                   <div class="link-title">A Stars Life</div>
+                </div></a
+              ><a href="/projects/unblockedgames66" class="link"
+                ><div bg="{bg}" class="page-wrapper">
+                  <div
+                    class="link-background"
+                    style="
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images-removebg-preview.png?v=1651885844117);
+                    "
+                  ></div>
+                  <div class="link-title">Unblocked Games</div>
                 </div></a
               ><a href="https://goailie-stats-machine.glitch.me" class="link"
                 ><div bg="{bg}" class="page-wrapper">
