--- a/projects/starslife/index.html
+++ b/projects/starslife/index.html
@@ -25,14 +25,24 @@
     <h1>A Stars Life</h1>
 
     <h2>Randomized Choose Your Own Adventure</h2>
-    
-    <p class="date"></p>
+
+    <p class="date">2/28/22</p>
 
     <p>
-      A Stars Life is a choose your own adventure game that I made in the 1st Semester 
+      A Stars Life is a choose your own adventure game that I made in the 2nd
+      semester of my 8th grade year. It was made for a physical science project
+      that I said you know what, why not code it. On the website you go through
+      different stages of a star. It is randomized meaning sometimes you could
+      end up as a black hole, a planetary nebula, or not even make it to
+      becoming a star. To play, just click the next button at the button and
+      learn about stars.
     </p>
     <p class="links">
-      <a href="https://unblocked-games-66.glitch.me">Check It Out</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/blog/2">The Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://glitch.com/edit/#!/unblocked-games-66">Source Code</a>
+      <a href="https://a-stars-life.glitch.me">Check It Out</a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<a
+        href="https://glitch.com/edit/#!/https://a-stars-life"
+        >Source Code</a
+      >
     </p>
   </body>
 </html>
