👗🎰 Checkpoint ./projects/goaliestats/index.html:31343558/46

--- a/projects/goaliestats/index.html
+++ b/projects/goaliestats/index.html
@@ -22,7 +22,7 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog.html">Blog</a>
     </div>
-    <h1>A Stars Life</h1>
+    <h1>Goalie Stats Machine</h1>
 
     <h2>Randomized Choose Your Own Adventure</h2>
 
