--- a/projects/goaliestats/index.html
+++ b/projects/goaliestats/index.html
@@ -24,18 +24,12 @@
     </div>
     <h1>Goalie Stats Machine</h1>
 
-    <h2>Randomized Choose Your Own Adventure</h2>
+    <h2>Goalie Stats Taker</h2>
 
     <p class="date">9/14/20</p>
 
     <p>
-      A Stars Life is a choose your own adventure game that I made in the 2nd
-      semester of my 8th grade year. It was made for a physical science project
-      that I said you know what, why not code it. On the website you go through
-      different stages of a star. It is randomized meaning sometimes you could
-      end up as a black hole, a planetary nebula, or not even make it to
-      becoming a star. To play, just click the next button at the button and
-      learn about stars.
+      Goalie Stats Machine was my first web-based coding project that I made in the 1st semester of my 7th grade year. One of my friends came up to me and wanted to know if I knew of any goalie stats takers on the app store. I told him that I didn't know of any but that I could code one for him. Again, this was my first web-based coding project so the css and the code in general is a bit... iffy. And with my belief of not improving my old coding projects to see my improvement, it will 
     </p>
     <p class="links">
       <a href="https://a-stars-life.glitch.me">Check It Out</a
