🌻🕴 Checkpoint ./projects/goaliestats/index.html:31343558/7629 ./projects.html:31343558/64

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                   ></div>
                   <div class="link-title">Unblocked Games</div>
                 </div></a
-              ><a href="https://goailie-stats-machine.glitch.me" class="link"
+              ><a href="/projects/goaliestats" class="link"
                 ><div bg="{bg}" class="page-wrapper">
                   <div
                     class="link-background"
