--- a/projects/goaliestats/index.html
+++ b/projects/goaliestats/index.html
@@ -29,12 +29,20 @@
     <p class="date">9/14/20</p>
 
     <p>
-      Goalie Stats Machine was my first web-based coding project that I made in the 1st semester of my 7th grade year. One of my friends came up to me and wanted to know if I knew of any goalie stats takers on the app store. I told him that I didn't know of any but that I could code one for him. Again, this was my first web-based coding project so the css and the code in general is a bit... iffy. And with my belief of not improving my old coding projects to see my improvement, it will 
+      Goalie Stats Machine was my first web-based coding project that I made in
+      the 1st semester of my 7th grade year. One of my friends came up to me and
+      wanted to know if I knew of any goalie stats takers on the app store. I
+      told him that I didn't know of any but that I could code one for him.
+      Again, this was my first web-based coding project so the css and the code
+      in general is a bit... iffy. And with my belief of not improving my old
+      coding projects to see my improvement, it will most likely stay that way.
+      In the future I may make an upgraded version of this, but for know it
+      works, just lacking in the css department.
     </p>
     <p class="links">
-      <a href="https://a-stars-life.glitch.me">Check It Out</a
+      <a href="https://goalie-stats-machine.me">Check It Out</a
       >&nbsp;&nbsp;|&nbsp;&nbsp;<a
-        href="https://glitch.com/edit/#!/https://a-stars-life"
+        href="https://glitch.com/edit/#!/https://goalie-stats-machine"
         >Source Code</a
       >
     </p>
