⚽🍄 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog.html">Blog</a>
     </div>
-    <p>Coming Soon!</p>
+    <h1>
+      Homepage coming soon...
+    </h1>
   </body>
 </html>
