⚽️👷 Checkpoint ./projects/unblockedgames66/index.html:31343558/89

--- a/projects/unblockedgames66/index.html
+++ b/projects/unblockedgames66/index.html
@@ -37,7 +37,7 @@
       google sites. If you want to learn more about it you can check my blog.
     </p>
     <p class="links">
-      <a href="https://turkey2098.github.io/unblockedgames66">Check It Out</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/blog/2">The Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://glitch.com/edit/#!/unblocked-games-66">Source Code</a>
+      <a href="https://turkey2098.github.io/unblockedgames66">Check It Out</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/blog/2">The Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://https://github.com/Turkey2098/unblockedgames66">Source Code</a>
     </p>
   </body>
 </html>
