--- a/projects/goaliestats/index.html
+++ b/projects/goaliestats/index.html
@@ -40,9 +40,9 @@
       works, just lacking in the css department.
     </p>
     <p class="links">
-      <a href="https://goalie-stats-machine.me">Check It Out</a
+      <a href="https://turkey2098.github.io/goalieStatsTaker/">Check It Out</a
       >&nbsp;&nbsp;|&nbsp;&nbsp;<a
-        href="https://glitch.com/edit/#!/https://goalie-stats-machine"
+        href="https://github.com/Turkey2098/goalieStatsMachine"
         >Source Code</a
       >
     </p>
