🎋🎰 Checkpoint ./.glitch-assets:31343558/477 ./blog.html:31343558/226 ./style.css:31343558/341 ./blog/4/index.html:31343558/85

--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
                 ><div bg="{bg}" class="page-wrapper">
                   <div
                     class="link-background"
-                    style="background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__6_-removebg-preview.png?v=1652657970062);"
+                    style="background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__14_-removebg-preview.png?v=1652658112833)"
                   ></div>
                   <div class="link-title">They Blocked Scratch?</div>
                 </div></a
