☎️🤖 Checkpoint ./blog.html:31343558/227 ./projects/goaliestats/index.html:31343558/23 ./blog/1/index.html:31343558/3854 ./blog/2/index.html:31343558/49

--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
                   <div
                     class="link-background"
                     style="
-                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/Screenshot%202022-04-30%203.01.33%20PM.png?v=1651345324046);
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images-removebg-preview.png?v=1651885844117);
                     "
                   ></div>
                   <div class="link-title">Unblocked Games</div>
