--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
       Homepage coming soon...
     </h1>
     
-    <div id=
+    <div id="counter">
     <a href="https://www.hitwebcounter.com" target="_blank">
-    <img src="https://hitwebcounter.com/counter/counter.php?page=7989864&style=0027&nbdigits=5&type=page&initCount=0" title="Free Counter" alt="web counter"   border="0" /></a>     
+    <img src="https://hitwebcounter.com/counter/counter.php?page=7989864&style=0027&nbdigits=5&type=page&initCount=0" title="Free Counter" alt="web counter"   border="0" /></a>  
+    </div>
   </body>
 </html>
