--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,15 @@
         <div>
           <div class="container" >
             <div class="posts" >
+              <a href="blog/4" class="link" 
+                ><div bg="{bg}" class="page-wrapper">
+                  <div
+                    class="link-background"
+                    style="background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__14_-removebg-preview.png?v=1652658112833)"
+                  ></div>
+                  <div class="link-title">They Blocked Scratch?</div>
+                </div></a
+              >
               <a href="blog/3" class="link" 
                 ><div bg="{bg}" class="page-wrapper">
                   <div
@@ -45,7 +54,7 @@
                   <div
                     class="link-background"
                     style="
-                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/Screenshot%202022-04-30%203.01.33%20PM.png?v=1651345324046);
+                      background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images-removebg-preview.png?v=1651885844117);
                     "
                   ></div>
                   <div class="link-title">Unblocked Games</div>
