😼🎲 Checkpoint ./index.html:31343558/343 ./style.css:31343558/233

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog.html">Blog</a>
     </div>
+    
     <h1>
-      Homepage coming soon...
+      Who Am I?
     </h1>
     
     <div id="counter">
