🔦🕌 Checkpoint ./index.html:31343558/3093 ./style.css:31343558/160

--- a/index.html
+++ b/index.html
@@ -22,14 +22,23 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog.html">Blog</a>
     </div>
-    
-    <h1>
-      Who Am I?
-    </h1>
-    
+
+    <h1>Hi,</h1>
+
+    <p>
+      I am Turkey2098. I code as a hobby, to learn, and hopefully do this for a
+      job later in life. I specialize in Web Development using HTML, CSS, and
+      JS, although I am trying to improve my Javascript.
+    </p>
+
     <div id="counter">
-    <a href="https://www.hitwebcounter.com" target="_blank">
-    <img src="https://hitwebcounter.com/counter/counter.php?page=7989864&style=0027&nbdigits=5&type=page&initCount=0" title="Free Counter" alt="web counter"   border="0" /></a>  
+      <a href="https://www.hitwebcounter.com" target="_blank">
+        <img
+          src="https://hitwebcounter.com/counter/counter.php?page=7989864&style=0027&nbdigits=5&type=page&initCount=0"
+          title="Free Counter"
+          alt="web counter"
+          border="0"
+      /></a>
     </div>
   </body>
 </html>
