💿🍶 Checkpoint ./style.css:31343558/16 ./index.html:31343558/3162

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <p>
       I am Turkey2098. I code as a hobby, to learn, and hopefully do this for a
       job later in life. I specialize in Web Development using HTML, CSS, and
-      JS, although I am trying to improve my Javascript.
+      JS, although I am trying to improve my Javascript. Here you will see my
+      blogs, projects and me just rying to get better.
     </p>
 
     <div id="counter">
