--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="/blog.html">Blog</a>
     </div>
 
-    <div class="container">
+    <div class="home-container">
       <h1>Hi,</h1>
 
       <p>
