🔏🛏️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -22,13 +22,50 @@
       <a href="/projects.html">Projects</a>
       <a href="/blog.html">Blog</a>
     </div>
-    <h1>
-      Homepage coming soon...
-    </h1>
-    
+
+    <div class="home-container">
+      <h1>Hi,</h1>
+
+      <p>
+        I am Turkey2098. I code as a hobby, to learn, and hopefully do this for
+        a job later in life. I specialize in Web Development using HTML, CSS,
+        and JS, although I am trying to improve my Javascript. Here you will see
+        my blogs, projects, and me just trying to get better at coding.
+      </p>
+
+      <hr />
+
+      <h1>My Projects</h1>
+
+      <p>
+        I wouldn't be a coder without some projects. So far in my few years of
+        coding I have made an unblocked games website, a goalie stats machine,
+        and many more smaller projects. Feel free to check them out.
+      </p>
+
+      <button>My Projects</button>
+
+      <hr />
+
+      <h1>My Blogs</h1>
+
+      <p>
+        My blogs are where I express my feebuttonngs, give tips, and share my
+        projects in a creative way. They're normally a 2-3 minute read with the
+        occasional memes, and snippets of code. Give them a try.
+      </p>
+
+      <button>My Blogs</button>
+    </div>
+
     <div id="counter">
-    <a href="https://www.hitwebcounter.com" target="_blank">
-    <img src="https://hitwebcounter.com/counter/counter.php?page=7989864&style=0027&nbdigits=5&type=page&initCount=0" title="Free Counter" alt="web counter"   border="0" /></a>  
+      <a href="https://www.hitwebcounter.com" target="_blank">
+        <img
+          src="https://hitwebcounter.com/counter/counter.php?page=7989864&style=0027&nbdigits=5&type=page&initCount=0"
+          title="Free Counter"
+          alt="web counter"
+          border="0"
+      /></a>
     </div>
   </body>
 </html>
