👑🏮 Checkpoint ./blog.html:31343558/29 ./projects.html:31343558/11 ./projects/goaliestats/index.html:31343558/23 ./projects/starslife/index.html:31343558/15 ./projects/unblockedgames66/index.html:31343558/27 ./blog/4/index.html:31343558/41

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
     />
-    <title>Turkey2098</title>
+    <title>Turkey2098 | Projects</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
   </head>
