👡💰 Checkpoint ./index.html:31343558/4728 ./test.html:31343558/32543 ./test.css:31343558/3836 ./script.js:31343558/788 ./style.css:31343558/30

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         and many more smaller projects. Feel free to check them out.
       </p>
 
-      <button>My Projects</button>
+      <button class="homeLink">My Projects</button>
 
       <hr />
 
@@ -55,7 +55,7 @@
         occasional memes, and snippets of code. Give them a try.
       </p>
 
-      <button>My Blogs</button>
+      <button class="homeLink">My Blogs</button>
     </div>
 
     <div id="counter">
