--- a/test.html
+++ b/test.html
@@ -10,10 +10,13 @@
     <title>Turkey2098</title>
     <style>
       .collapsible {
+        background-color: #777;
         color: white;
         cursor: pointer;
+        padding: 18px;
+        width: 100%;
         border: none;
-        text-align: left;
+        text-align: center;
         outline: none;
         font-size: 15px;
       }
@@ -40,7 +43,6 @@
         max-height: 0;
         overflow: hidden;
         transition: max-height 0.2s ease-out;
-        background-color: #f1f1f1;
       }
     </style>
     <link rel="stylesheet" href="/style.css" />
@@ -80,8 +82,8 @@
       </p>
 
       <button class="homeLink">My Blogs</button>
-      
-      <br>
+
+      <br />
 
       <button class="collapsible">Open Collapsible</button>
       <div class="content">
