💑🏏 Checkpoint ./test.html:31343558/25456 ./index.html:31343558/8 ./script.js:31343558/930 ./test.css:31343558/8832

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h1>My Blogs</h1>
 
       <p>
-        My blogs are where I express my feebuttonngs, give tips, and share my
+        My blogs are where I express my feelings, give tips, and share my
         projects in a creative way. They're normally a 2-3 minute read with the
         occasional memes, and snippets of code. Give them a try.
       </p>
