--- a/test.html
+++ b/test.html
@@ -8,44 +8,7 @@
       href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
     />
     <title>Turkey2098</title>
-    <style>
-      .collapsible {
-        background-color: #777;
-        color: white;
-        cursor: pointer;
-        padding: 18px;
-        width: 100%;
-        border: none;
-        text-align: center;
-        outline: none;
-        font-size: 15px;
-      }
-
-      .active,
-      .collapsible:hover {
-        background-color: #555;
-      }
-
-      .collapsible:after {
-        content: "\002B";
-        color: white;
-        font-weight: bold;
-        float: right;
-        margin-left: 5px;
-      }
-
-      .active:after {
-        content: "\2212";
-      }
-
-      .content {
-        padding: 0 18px;
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.2s ease-out;
-      }
-    </style>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/test.css" />
     <script src="/script.js" defer></script>
   </head>
   <body>
@@ -61,66 +24,27 @@
 
       <hr />
 
-      <h1>My Projects</h1>
+      <br />
 
-      <p>
-        I wouldn't be a coder without some projects. So far in my few years of
-        coding I have made an unblocked games website, a goalie stats machine,
-        and many more smaller projects. Feel free to check them out.
-      </p>
-
-      <button class="homeLink">My Projects</button>
+      <h1 class="collapsible">My Projects</h1>
+      <div class="content">
+        <p>
+          I wouldn't be a coder without some projects. So far in my few years of
+          coding I have made an unblocked games website, a goalie stats machine,
+          and many more smaller projects. Feel free to check them out.
+        </p>
+      </div>
 
       <hr />
 
-      <h1>My Blogs</h1>
-
-      <p>
-        My blogs are where I express my feebuttonngs, give tips, and share my
-        projects in a creative way. They're normally a 2-3 minute read with the
-        occasional memes, and snippets of code. Give them a try.
-      </p>
-
-      <button class="homeLink">My Blogs</button>
-
       <br />
 
-      <button class="collapsible">Open Collapsible</button>
+      <h1 class="collapsible">My Blogs</h1>
       <div class="content">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-      </div>
-
-      <p>Collapsible Set:</p>
-      <button class="collapsible">Open Section 1</button>
-      <div class="content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-      </div>
-      <button class="collapsible">Open Section 2</button>
-      <div class="content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
-      </div>
-      <button class="collapsible">Open Section 3</button>
-      <div class="content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          My blogs are where I express my feelings, give tips, and share my
+          projects in a creative way. They're normally a 2-3 minute read with
+          the occasional memes, and snippets of code. Give them a try.
         </p>
       </div>
     </div>
