--- a/index.html
+++ b/index.html
@@ -35,37 +35,46 @@
 
       <hr />
 
-      <h1>My Projects</h1>
+      <br />
 
-      <p>
-        I wouldn't be a coder without some projects. So far in my few years of
-        coding I have made an unblocked games website, a goalie stats machine,
-        and many more smaller projects. Feel free to check them out.
-      </p>
-
-      <button class="homeLink">My Projects</button>
+      <h1 class="collapsible">My Projects</h1>
+      <div class="content">
+        <p>
+          I wouldn't be a coder without some projects. So far in my few years of
+          coding I have made an unblocked games website, a goalie stats machine,
+          and many more smaller projects. Feel free to check them out.
+        </p>
+      </div>
 
       <hr />
 
-      <h1>My Blogs</h1>
+      <br />
 
-      <p>
-        My blogs are where I express my feelings, give tips, and share my
-        projects in a creative way. They're normally a 2-3 minute read with the
-        occasional memes, and snippets of code. Give them a try.
-      </p>
-
-      <button class="homeLink">My Blogs</button>
+      <h1 class="collapsible">My Blogs</h1>
+      <div class="content">
+        <p>
+          My blogs are where I express my feelings, give tips, and share my
+          projects in a creative way. They're normally a 2-3 minute read with
+          the occasional memes, and snippets of code. Give them a try.
+        </p>
+      </div>
     </div>
 
-    <div id="counter">
-      <a href="https://www.hitwebcounter.com" target="_blank">
-        <img
-          src="https://hitwebcounter.com/counter/counter.php?page=7989864&style=0027&nbdigits=5&type=page&initCount=0"
-          title="Free Counter"
-          alt="web counter"
-          border="0"
-      /></a>
-    </div>
+    <script>
+      var coll = document.getElementsByClassName("collapsible");
+      var i;
+
+      for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          var content = this.nextElementSibling;
+          if (content.style.maxHeight) {
+            content.style.maxHeight = null;
+          } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+          }
+        });
+      }
+    </script>
   </body>
 </html>
