--- a/test.html
+++ b/test.html
@@ -8,10 +8,21 @@
       href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
     />
     <title>Turkey2098</title>
-    <link rel="stylesheet" href="/test.css" />
+    <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
   </head>
   <body>
+    <div class="topnav">
+      <img
+        src="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
+        onclick="window.location.href=('/index.html')"
+        class="homeImg"
+      />
+      <a href="/index.html">Home</a>
+      <a href="/projects.html">Projects</a>
+      <a href="/blog.html">Blog</a>
+    </div>
+
     <div class="home-container">
       <h1>Hi,</h1>
 
