--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       />
       <a href="/index.html">Home</a>
       <a href="/projects.html">Projects</a>
-      <a href="/blog.html">Blog</a>
+      <a href="/blogs.html">Blog</a>
     </div>
 
     <div class="home-container">
@@ -44,6 +44,8 @@
           coding I have made an unblocked games website, a goalie stats machine,
           and many more smaller projects. Feel free to check them out.
         </p>
+
+        <button onclick="window.location.replace('/projects.html')" class="homeLink">My Projects</button>
       </div>
 
       <hr />
@@ -57,6 +59,8 @@
           projects in a creative way. They're normally a 2-3 minute read with
           the occasional memes, and snippets of code. Give them a try.
         </p>
+
+        <button onclick="window.location.replace('/blogs.html')" class="homeLink">My Blogs</button>
       </div>
     </div>
 
