--- a/test.html
+++ b/test.html
@@ -10,6 +10,107 @@
     <title>Turkey2098</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
+    <style>
+      .active {
+        background-color: #04aa6d;
+        color: white;
+      }
+
+      .topnav .icon {
+        display: none;
+      }
+
+      .dropdown {
+        overflow: hidden;
+        display: inline-block;
+      }
+
+      .dropdown .dropbtn {
+        border: none;
+        outline: none;
+        background-color: inherit;
+        margin: 0;
+        display: inline-block;
+        overflow: hidden;
+        color: #cfdcee;
+        padding: 10px 12px;
+        font-size: 25px;
+        cursor: pointer;
+        font-family: "Ubuntu Condensed", sans-serif;
+        text-decoration: none;
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+      }
+
+      .dropdown-content a {
+        float: none;
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+      }
+
+      .topnav a:hover,
+      .dropdown:hover .dropbtn {
+        background-color: #555;
+        color: white;
+      }
+
+      .dropdown-content a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+
+      @media screen and (max-width: 600px) {
+        .topnav a:not(:first-child),
+        .dropdown .dropbtn {
+          display: none;
+        }
+        .topnav a.icon {
+          float: right;
+          display: block;
+        }
+      }
+
+      @media screen and (max-width: 600px) {
+        .topnav.responsive {
+          position: relative;
+        }
+        .topnav.responsive .icon {
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
+        .topnav.responsive a {
+          float: none;
+          display: block;
+          text-align: left;
+        }
+        .topnav.responsive .dropdown {
+          float: none;
+        }
+        .topnav.responsive .dropdown-content {
+          position: relative;
+        }
+        .topnav.responsive .dropdown .dropbtn {
+          display: block;
+          width: 100%;
+          text-align: left;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="topnav">
@@ -22,15 +123,15 @@
       <a href="/projects.html">Projects</a>
       <a href="/blogs.html">Blog</a>
       <div class="dropdown">
-    <button class="dropbtn">Dropdown
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
-  </div>
+        <button class="dropbtn">
+          Links
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Github</a>
+          <a href="#">-</a>
+          <a href="#">-</a>
+        </div>
+      </div>
     </div>
 
     <div class="home-container">
@@ -55,7 +156,12 @@
           and many more smaller projects. Feel free to check them out.
         </p>
 
-        <button onclick="window.location.replace('/projects.html')" class="homeLink">My Projects</button>
+        <button
+          onclick="window.location.replace('/projects.html')"
+          class="homeLink"
+        >
+          My Projects
+        </button>
       </div>
 
       <hr />
@@ -70,11 +176,25 @@
           the occasional memes, and snippets of code. Give them a try.
         </p>
 
-        <button onclick="window.location.replace('/blogs.html')" class="homeLink">My Blogs</button>
+        <button
+          onclick="window.location.replace('/blogs.html')"
+          class="homeLink"
+        >
+          My Blogs
+        </button>
       </div>
     </div>
 
     <script>
+      function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "taopnav") {
+          x.className += " responsive";
+        } else {
+          x.className = "topnav";
+        }
+      }
+
       var coll = document.getElementsByClassName("collapsible");
       var i;
 
@@ -89,15 +209,6 @@
           }
         });
       }
-      
-      function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
     </script>
   </body>
 </html>
