--- a/blogs.html
+++ b/blogs.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
     />
-    <title>Blog</title>
+    <title>Turkey 2098 | Blogs</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -20,7 +20,7 @@
       />
       <a href="/index.html">Home</a>
       <a href="/projects.html">Projects</a>
-      <a href="/blog.html">Blog</a>
+      <a href="/blogs.html">Blog</a>
     </div>
 
     <h1>My Blogs:</h1>
