--- a/test.html
+++ b/test.html
@@ -16,10 +16,6 @@
         color: white;
       }
 
-      .topnav .icon {
-        display: none;
-      }
-
       .dropdown {
         overflow: hidden;
         display: inline-block;
@@ -58,10 +54,10 @@
         text-align: left;
       }
 
-      .topnav a:hover,
-      .dropdown:hover .dropbtn {
-        background-color: #555;
-        color: white;
+
+      .dropbtn:hover {
+        opacity: 0.6;
+        transition: 0.4s;
       }
 
       .dropdown-content a:hover {
@@ -73,43 +69,6 @@
         display: block;
       }
 
-      @media screen and (max-width: 600px) {
-        .topnav a:not(:first-child),
-        .dropdown .dropbtn {
-          display: none;
-        }
-        .topnav a.icon {
-          float: right;
-          display: block;
-        }
-      }
-
-      @media screen and (max-width: 600px) {
-        .topnav.responsive {
-          position: relative;
-        }
-        .topnav.responsive .icon {
-          position: absolute;
-          right: 0;
-          top: 0;
-        }
-        .topnav.responsive a {
-          float: none;
-          display: block;
-          text-align: left;
-        }
-        .topnav.responsive .dropdown {
-          float: none;
-        }
-        .topnav.responsive .dropdown-content {
-          position: relative;
-        }
-        .topnav.responsive .dropdown .dropbtn {
-          display: block;
-          width: 100%;
-          text-align: left;
-        }
-      }
     </style>
   </head>
   <body>
