--- a/test.html
+++ b/test.html
@@ -11,10 +11,6 @@
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
     <style>
-      .active {
-        background-color: #04aa6d;
-        color: white;
-      }
 
       .dropdown {
         overflow: hidden;
@@ -30,24 +26,27 @@
         overflow: hidden;
         color: #cfdcee;
         padding: 10px 12px;
-        font-size: 25px;
         cursor: pointer;
         font-family: "Ubuntu Condensed", sans-serif;
         text-decoration: none;
+      }
+      
+      .dropdown {
+        font-size: 25px;
       }
 
       .dropdown-content {
         display: none;
         position: absolute;
-        background-color: #f9f9f9;
+        background-color: #2c2c2c;
         min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+        font-size: 15px;
       }
 
       .dropdown-content a {
         float: none;
-        color: black;
+        color: #cfdcee;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
@@ -55,14 +54,9 @@
       }
 
 
-      .dropbtn:hover {
+      .dropbtn:hover, .dropdown-content a:hover {
         opacity: 0.6;
         transition: 0.4s;
-      }
-
-      .dropdown-content a:hover {
-        background-color: #ddd;
-        color: black;
       }
 
       .dropdown:hover .dropdown-content {
