--- a/test.html
+++ b/test.html
@@ -26,31 +26,28 @@
         overflow: hidden;
         color: #cfdcee;
         padding: 10px 12px;
+        font-size: 25px;
         cursor: pointer;
         font-family: "Ubuntu Condensed", sans-serif;
         text-decoration: none;
-      }
-      
-      .dropdown {
-        font-size: 25px;
       }
 
       .dropdown-content {
         display: none;
         position: absolute;
         background-color: #2c2c2c;
-        min-width: 160px;
+        min-width: 120px;
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
-        font-size: 15px;
       }
 
       .dropdown-content a {
         float: none;
         color: #cfdcee;
-        padding: 12px 16px;
+        padding: 8px 16px;
         text-decoration: none;
         display: block;
         text-align: left;
+        font-size: 18px;
       }
 
 
@@ -81,8 +78,8 @@
         </button>
         <div class="dropdown-content">
           <a href="#">Github</a>
-          <a href="#">-</a>
-          <a href="#">-</a>
+          <a href="#">Words</a>
+          <a href="#">Words</a>
         </div>
       </div>
     </div>
