👻🌮 Checkpoint ./test.html:31343558/87

--- a/test.html
+++ b/test.html
@@ -77,9 +77,9 @@
           Links
         </button>
         <div class="dropdown-content">
-          <a href="#">Github</a>
-          <a href="#">Words</a>
-          <a href="#">Words</a>
+          <a href="https://github.com/Turkey2098">Github</a>
+          <a href="">Discord</a>
+          <a href="https://glitch.com/@Turkey2098">Glitch</a>
         </div>
       </div>
     </div>
