--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,15 @@
       <a href="/index.html">Home</a>
       <a href="/projects.html">Projects</a>
       <a href="/blogs.html">Blog</a>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Links
+        </button>
+        <div class="dropdown-content">
+          <a href="https://github.com/Turkey2098">Github</a>
+          <a href="https://glitch.com/@Turkey2098">Glitch</a>
+        </div>
+      </div>
     </div>
 
     <h1>My Projects:</h1>
