👘🎾 Checkpoint ./0toDo.txt:31343558/30 ./index.html:31343558/715 ./.glitch-assets:31343558/491 ./style.css:31343558/280 ./projects.html:31343558/48

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
           <a href="https://glitch.com/@Turkey2098">Glitch</a>
         </div>
       </div>
+      <div class="profileDropdown" style="float:right">
+        <button class="dropbtn"><img src="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/Screenshot_2022-05-19_4.22.29_PM-removebg-preview.png?v=1652991790693"/></button>
+        <div class="dropdown-content" style="float:right">
+          <a href="https://github.com/Turkey2098">Github</a>
+          <a href="https://glitch.com/@Turkey2098">Glitch</a>
+        </div>
+      </div>
     </div>
 
     <div class="home-container">
