🐩⏱ Checkpoint ./index.html:31343558/7382 ./projects.html:31343558/316 ./blogs.html:31343558/407 ./projects/goaliestats/index.html:31343558/316 ./projects/starslife/index.html:31343558/316 ./projects/unblockedgames66/index.html:31343558/316 ./blog/1/index.html:31343558/416 ./blog/2/index.html:31343558/550

--- a/blogs.html
+++ b/blogs.html
@@ -9,9 +9,21 @@
     />
     <title>Turkey 2098 | Blogs</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="/script.js" defer></script>
+    <script
+      src="https://cdn.onesignal.com/sdks/OneSignalSDK.js"
+      async=""
+    ></script>
+    <script>
+      window.OneSignal = window.OneSignal || [];
+      OneSignal.push(function () {
+        OneSignal.init({
+          appId: "dbdb36aa-9541-47c0-b6a0-80f478b4ee26",
+        });
+      });
+    </script>
   </head>
   <body>
-    <script src="script.js" defer></script>
     <div class="topnav">
       <img
         src="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
