--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,18 @@
     <title>Turkey2098 | Projects</title>
     <link rel="stylesheet" href="/style.css" />
     <script src="/script.js" defer></script>
+    <script
+      src="https://cdn.onesignal.com/sdks/OneSignalSDK.js"
+      async=""
+    ></script>
+    <script>
+      window.OneSignal = window.OneSignal || [];
+      OneSignal.push(function () {
+        OneSignal.init({
+          appId: "dbdb36aa-9541-47c0-b6a0-80f478b4ee26",
+        });
+      });
+    </script>
   </head>
   <body>
     <div class="topnav">
