--- a/projects/unblockedgames66/index.html
+++ b/projects/unblockedgames66/index.html
@@ -10,6 +10,18 @@
     <title>Turkey2098 | Unblocked Games 66</title>
     <link rel="stylesheet" href="/projects/style.css" />
     <script src="/projects/script.js" defer></script>
+    <script
+      src="https://cdn.onesignal.com/sdks/OneSignalSDK.js"
+      async=""
+    ></script>
+    <script>
+      window.OneSignal = window.OneSignal || [];
+      OneSignal.push(function () {
+        OneSignal.init({
+          appId: "dbdb36aa-9541-47c0-b6a0-80f478b4ee26",
+        });
+      });
+    </script>
   </head>
   <body>
     <div class="topnav">
