--- a/blogs.html
+++ b/blogs.html
@@ -60,6 +60,17 @@
             <div class="link-title">They Blocked Scratch?</div>
           </div></a
         >
+        <a href="blog/4" class="link"
+          ><div bg="{bg}" class="page-wrapper">
+            <div
+              class="link-background"
+              style="
+                background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__14_-removebg-preview.png?v=1652658112833);
+              "
+            ></div>
+            <div class="link-title">They Blocked Scratch?</div>
+          </div></a
+        >
         <a href="blog/3" class="link"
           ><div bg="{bg}" class="page-wrapper">
             <div
