--- a/blogs.html
+++ b/blogs.html
@@ -54,10 +54,10 @@
             <div
               class="link-background"
               style="
-                background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__14_-removebg-preview.png?v=1652658112833);
+                background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/icon-grammarly.png?v=1653176951548);
               "
             ></div>
-            <div class="link-title">They Blocked Scratch?</div>
+            <div class="link-title">A Test Trick With Grammarly</div>
           </div></a
         >
         <a href="blog/4" class="link"
