--- a/projects/goaliestats/index.html
+++ b/projects/goaliestats/index.html
@@ -32,7 +32,16 @@
       />
       <a href="/index.html">Home</a>
       <a href="/projects.html">Projects</a>
-      <a href="/blog.html">Blog</a>
+      <a href="/blogs.html">Blogs</a>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Links
+        </button>
+        <div class="dropdown-content">
+          <a href="https://github.com/Turkey2098">Github</a>
+          <a href="https://glitch.com/@Turkey2098">Glitch</a>
+        </div>
+      </div>
     </div>
     <h1>Goalie Stats Machine</h1>
 
