--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       />
       <a href="/index.html">Home</a>
       <a href="/projects.html">Projects</a>
-      <a href="/blogs.html">Blog</a>
+      <a href="/blogs.html">Blogs</a>
       <div class="dropdown">
         <button class="dropbtn">Links</button>
         <div class="dropdown-content">
