--- a/blogs.html
+++ b/blogs.html
@@ -35,7 +35,7 @@
       <a href="/blogs.html">Blogs</a>
       <div class="dropdown">
         <button class="dropbtn">
-          Links
+          Social
         </button>
         <div class="dropdown-content">
           <a href="https://github.com/Turkey2098">Github</a>
