--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a href="/projects.html">Projects</a>
       <a href="/blogs.html">Blogs</a>
       <div class="dropdown">
-        <button class="dropbtn">Links</button>
+        <button class="dropbtn">Social</button>
         <div class="dropdown-content">
           <a href="https://github.com/Turkey2098">Github</a>
           <a href="https://glitch.com/@Turkey2098">Glitch</a>
