--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         });
       });
     </script>
+    <script src="//padlock.glitch.me/s.js" defer></script>
   </head>
   <body>
     <div class="topnav">
