🐯🍘 Checkpoint ./index.html:31343558/999

--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
 
       <br />
 
-      <h1 class="collapsible">My Projects</h1>
+      <h1 class="collapsible">Dublin Coders</h1>
       <div class="content">
         <p>
-          I wouldn't be a coder without some projects. So far in my few years of
-          coding I have made an unblocked games website, a goalie stats machine,
-          and many more smaller projects. Feel free to check them out.
+          I am now a part of a group called Dublin Coders. As the name suggests
         </p>
 
         <button
@@ -70,26 +68,6 @@
           class="homeLink"
         >
           My Projects
-        </button>
-      </div>
-
-      <hr />
-
-      <br />
-
-      <h1 class="collapsible">My Blogs</h1>
-      <div class="content">
-        <p>
-          My blogs are where I express my feelings, give tips, and share my
-          projects in a creative way. They're normally a 2-3 minute read with
-          the occasional memes, and snippets of code. Give them a try.
-        </p>
-
-        <button
-          onclick="window.location.replace('/blogs.html')"
-          class="homeLink"
-        >
-          My Blogs
         </button>
       </div>
     </div>
