Added Dublin Coders Section

--- a/index.html
+++ b/index.html
@@ -60,15 +60,14 @@
       <h1 class="collapsible">Dublin Coders</h1>
       <div class="content">
         <p>
-          I am now a part of a group called Dublin Coders. As the name suggests
+          I am now a part of a group called Dublin Coders. As the name suggests,
+          we are a group of coders in Dublin that are just trying to learn more
+          coding. In the group we will be doing some project contest and other
+          fun stuff. This is what I will be doing for this summer, and if you
+          want to check it out, click the button below.
         </p>
 
-        <button
-          onclick="window.location.replace('/projects.html')"
-          class="homeLink"
-        >
-          My Projects
-        </button>
+        <button onclick="window.location.replace('https://discord.gg/neCZa88S')" class="homeLink">Dublin Coders</button>
       </div>
     </div>
 
