Added FTH Stats

--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
             ></div>
             <div class="link-title">Unblocked Games</div>
           </div></a
-        ><a href="/projects/goaliestats" class="link"
+        ><a href="/projects/FTHStats" class="link"
           ><div bg="{bg}" class="page-wrapper">
             <div
               class="link-background"
