--- a/projects/FTHStats/index.html
+++ b/projects/FTHStats/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
     />
-    <title>Turkey2098 | Goalie Stats Machine</title>
+    <title>Turkey2098 | FTH Stats</title>
     <link rel="stylesheet" href="/projects/style.css" />
     <script src="/projects/script.js" defer></script>
     <script
@@ -43,14 +43,14 @@
         </div>
       </div>
     </div>
-    <h1>Goalie Stats Machine</h1>
+    <h1>FTH Stats</h1>
 
-    <h2>A Hockey Goalie Stats Taker</h2>
+    <h2>Goalie Stats Taker</h2>
 
     <p class="date">9/14/20</p>
 
     <p>
-      Goalie Stats Machine was my first web-based coding project that I made in
+      FTH Stats was my first web-based coding project that I made in
       the 1st semester of my 7th grade year. One of my friends came up to me and
       wanted to know if I knew of any goalie stats takers on the app store. I
       told him that I didn't know of any but that I could code one for him.
@@ -61,9 +61,9 @@
       works, just lacking in the css department.
     </p>
     <p class="links">
-      <a href="https://turkey2098.github.io/goalieStatsMachine/">Check It Out</a
+      <a href="https://turkey2098.github.io/FTH_Stats/">Check It Out</a
       >&nbsp;&nbsp;|&nbsp;&nbsp;<a
-        href="https://github.com/Turkey2098/goalieStatsMachine"
+        href="https://github.com/Turkey2098/FTH_Stats"
         >Source Code</a
       >
     </p>
