Exporting to Turkey2098/Turkey2098.github.io ./index.html:31343558/7545 ./projects.html:31343558/32

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                 background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/images-removebg-preview.png?v=1651885844117);
               "
             ></div>
-            <div class="link-title">Unblocked Games</div>
+            <div class="link-title">Unblocked Games 66</div>
           </div></a
         ><a href="/projects/FTHStats" class="link"
           ><div bg="{bg}" class="page-wrapper">
@@ -76,7 +76,7 @@
                 background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__4_-removebg-preview.png?v=1651886385564);
               "
             ></div>
-            <div class="link-title">Goalie Stats Machine</div>
+            <div class="link-title">FTH Stats</div>
           </div></a
         >
       </div>
