--- a/index.html
+++ b/index.html
@@ -57,17 +57,40 @@
 
       <br />
 
-      <h1 class="collapsible">Dublin Coders</h1>
+      <h1 class="collapsible">My Projects</h1>
       <div class="content">
         <p>
-          I am now a part of a group called Dublin Coders. As the name suggests,
-          we are a group of coders in Dublin that are just trying to learn more
-          coding. In the group we will be doing some project contest and other
-          fun stuff. This is what I will be doing for this summer, and if you
-          want to check it out, click the button below.
+          I wouldn't be a coder without some projects. So far in my few years of
+          coding I have made an unblocked games website, a goalie stats machine,
+          and many more smaller projects. Feel free to check them out.
         </p>
 
-        <button onclick="window.location.replace('https://discord.gg/neCZa88S')" class="homeLink">Dublin Coders</button>
+        <button
+          onclick="window.location.replace('/projects.html')"
+          class="homeLink"
+        >
+          My Projects
+        </button>
+      </div>
+
+      <hr />
+
+      <br />
+
+      <h1 class="collapsible">My Blogs</h1>
+      <div class="content">
+        <p>
+          My blogs are where I express my feelings, give tips, and share my
+          projects in a creative way. They're normally a 2-3 minute read with
+          the occasional memes, and snippets of code. Give them a try.
+        </p>
+
+        <button
+          onclick="window.location.replace('/blogs.html')"
+          class="homeLink"
+        >
+          My Blogs
+        </button>
       </div>
     </div>
 
