🐯⛩ Checkpoint ./.glitch-assets:31343558/417 ./projects.html:31343558/808 ./projects/TWTScoreboard/index.html:31343558/2479

--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,16 @@
             <div
               class="link-background"
               style="
+                background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/OIP-removebg-preview.png?v=1657928431833);
+              "
+            ></div>
+            <div class="link-title">TWT Scoreboard</div>
+          </div></a
+        ><a href="/projects/TWTScoreboard" class="link"
+          ><div bg="{bg}" class="page-wrapper">
+            <div
+              class="link-background"
+              style="
                 background-image: url(https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/sun-png-hd-375376-removebg-preview.png?v=1651922133870);
               "
             ></div>
