🍡🐡 Checkpoint ./projects/TWTScoreboard/index.html:31343558/2232 ./projects.html:31343558/44

--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
 
     <div class="container">
       <div class="posts">
-        <a href="/projects/starslife" class="link"
+        <a href="/projects/TWTScoreboard" class="link"
           ><div bg="{bg}" class="page-wrapper">
             <div
               class="link-background"
@@ -58,7 +58,7 @@
             ></div>
             <div class="link-title">TWT Scoreboard</div>
           </div></a
-        ><a href="/projects/TWTScoreboard" class="link"
+        ><a href="/projects/starslife" class="link"
           ><div bg="{bg}" class="page-wrapper">
             <div
               class="link-background"
