--- a/projects/TWTScoreboard/index.html
+++ b/projects/TWTScoreboard/index.html
@@ -43,27 +43,18 @@
         </div>
       </div>
     </div>
-    <h1>FTH Stats</h1>
+    <h1>TWT Scoreboard</h1>
 
-    <h2>Goalie Stats Taker</h2>
+    <h2>Card Game Scoreboard</h2>
 
-    <p class="date">9/14/20</p>
+    <p class="date">7/14/2022</p>
 
     <p>
-      FTH Stats was my first web-based coding project that I made in
-      the 1st semester of my 7th grade year. One of my friends came up to me and
-      wanted to know if I knew of any goalie stats takers on the app store. I
-      told him that I didn't know of any but that I could code one for him.
-      Again, this was my first web-based coding project so the css and the code
-      in general is a bit... iffy. And with my belief of not improving my old
-      coding projects to see my improvement, it will most likely stay that way.
-      In the future I may make an upgraded version of this, but for know it
-      works, just lacking in the css department.
     </p>
     <p class="links">
-      <a href="https://turkey2098.github.io/FTH_Stats/">Check It Out</a
+      <a href="https://turkey2098.github.io/TWT_Scoreboard/">Check It Out</a
       >&nbsp;&nbsp;|&nbsp;&nbsp;<a
-        href="https://github.com/Turkey2098/FTH_Stats"
+        href="https://github.com/Turkey2098/TWT_Scoreboard"
         >Source Code</a
       >
     </p>
