🙎💈 Checkpoint ./projects/TWTScoreboard/index.html:31343558/189 ./projects/starslife/index.html:31343558/5

--- a/projects/TWTScoreboard/index.html
+++ b/projects/TWTScoreboard/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="https://cdn.glitch.global/7d1a1b38-8d2d-4542-b5ac-650c6eb984d3/download__3_-removebg-preview.png?v=1651854807095"
     />
-    <title>Turkey2098 | FTH Stats</title>
+    <title>Turkey2098 | TWT Scoreboard</title>
     <link rel="stylesheet" href="/projects/style.css" />
     <script src="/projects/script.js" defer></script>
     <script
@@ -50,7 +50,9 @@
     <p class="date">7/14/2022</p>
 
     <p>
+      TWT Scoreboard was a project that I made while I was on vaction...
     </p>
+    
     <p class="links">
       <a href="https://turkey2098.github.io/TWT_Scoreboard/">Check It Out</a
       >&nbsp;&nbsp;|&nbsp;&nbsp;<a
