--- a/projects/starslife/index.html
+++ b/projects/starslife/index.html
@@ -50,7 +50,7 @@
     <p class="date">2/28/22</p>
 
     <p>
-      A Stars Life is a choose your own adventure game that I made in the 2nd
+      A Stars Life was a choose your own adventure game that I made in the 2nd
       semester of my 8th grade year. It was made for a physical science project
       that I said you know what, why not code it. On the website you go through
       different stages of a star. It is randomized meaning sometimes you could
