🛳😽 Checkpoint ./projects/TWTScoreboard/index.html:31343558/285

--- a/projects/TWTScoreboard/index.html
+++ b/projects/TWTScoreboard/index.html
@@ -50,7 +50,7 @@
     <p class="date">7/14/2022</p>
 
     <p>
-      TWT Scoreboard was a project that I made while I was on vaction...
+      TWT Scoreboard was a project that I made while I was on vaction before my freshman year of highschool. I was struggling to find any good ideas to code and my brother suggested to make
     </p>
     
     <p class="links">
